k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobshout
  labels:
    app.kubernetes.io/part-of: jobshout
